# daigakuappfurukawa

./: .gitignore  BUILD_GUIDE.md  CI_CD_SETUP.md  README.md  build.gradle.kts  build_log.txt  build_log10.txt  build_log2.txt  build_log3.txt  build_log4.txt  build_log5.txt  build_log6.txt  build_log_phase17_p7.txt  build_log_phase17_p8.txt  build_log_phase17_p9.txt  gradle.properties  gradle.properties.template  gradlew  local.properties  local.properties.template  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
daigakuos-v2/: CHANGELOG.md  README.md  SYSTEM_ARCHITECTURE.md  TWITTER_TEMPLATES.md  moko_world_state.json  test_bio_engine.rb  test_output.txt  walkthrough.md
daigakuos-v2/client/: .gitignore  README.md  analyze_out.txt  clean_build.ps1  pubspec.yaml
daigakuos-v2/client/android/: build_log.txt  build_log_2.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_log_final.txt  build_log_furukawa.txt  build_log_phase12.txt  gradle.properties
daigakuos-v2/client/lib/: achievement_service.dart  achievements_gallery_screen.dart  calendar_screen.dart  database_helper.dart  haptics_service.dart  main.dart  moko_collection_screen.dart  (+6 more)
daigakuos-v2/ruby_native/: moko_engine.rb
daigakuos-v2/rust_core/: Cargo.toml
daigakuos-v2/rust_core/src/: cardio_neuro.rs  combat.rs  ecology.rs  genetics.rs  lib.rs  main.rs  metabolic.rs  pathogen.rs  physics.rs  proxy.rs  security.rs  state.rs  tutor.rs
daigakuos-v2/server/: daigakuos.db  go.mod  main.go  rails_out.txt
(+265 files in other folders)
